sphere gradients for pegs

--- a/index.html
+++ b/index.html
@@ -34,18 +34,22 @@
         <div class = 'peg cell'></div>
         <div class = 'peg cell'></div>
         <div class = 'peg cell'></div>
-        <div class = 'new-game'></div>
+        <div class = 'new-game'>
+            <button type='button'>New Game</button>
+        </div>
     </main>
     <side>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div class="submit"></div>
+        <div class='selector' id='red'></div>
+        <div class='selector' id='green'></div>
+        <div class='selector' id='blue'></div>
+        <div class='selector' id='yellow'></div>
+        <div class='selector' id='brown'></div>
+        <div class='selector' id='orange'></div>
+        <div class='selector' id='black'></div>
+        <div class='selector' id='white'></div>
+        <div class="submit">
+            <button type='button'>Submit</button>
+        </div>
     </side>
 </body>
 </html>
