added some holes and a nicer background

--- a/index.html
+++ b/index.html
@@ -9,47 +9,98 @@
     <script defer src="js/main.js"></script>
     
 </head>
-<body>
-    <main>
-        <div class='empty'></div>
-        <div class = 'master cell'></div>
-        <div class = 'peg cell'></div>
-        <div class = 'peg cell'></div>
-        <div class = 'peg cell'></div>
-        <div class = 'peg cell'></div>
-        <div class = 'peg cell'></div>
-        <div class = 'peg cell'></div>
-        <div class = 'peg cell'></div>
-        <div class = 'peg cell'></div>
-        <div class = 'peg cell'></div>
-        <div class = 'peg cell'></div>
-        <div class = 'peg cell'></div>
-        <div class = 'peg cell'></div>
-        <div class = 'peg cell'></div>
-        <div class = 'peg cell'></div>
-        <div class = 'peg cell'></div>
-        <div class = 'peg cell'></div>
-        <div class = 'peg cell'></div>
-        <div class = 'peg cell'></div>
-        <div class = 'peg cell'></div>
-        <div class = 'peg cell'></div>
-        <div class = 'peg cell'></div>
-        <div class = 'new-game'>
-            <button type='button'>New Game</button>
-        </div>
-    </main>
-    <side>
-        <div class='selector' id='red'></div>
-        <div class='selector' id='green'></div>
-        <div class='selector' id='blue'></div>
-        <div class='selector' id='yellow'></div>
-        <div class='selector' id='brown'></div>
-        <div class='selector' id='orange'></div>
-        <div class='selector' id='black'></div>
-        <div class='selector' id='white'></div>
-        <div class="submit">
-            <button type='button'>Submit</button>
-        </div>
-    </side>
+    <body>
+       <body2> 
+        <main>
+            <div class='empty'></div>
+            <div class = 'master cell'></div>
+            <div class = 'peg cell'></div>
+            <div class = 'peg cell' id="guess">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class = 'peg cell'></div>
+            <div class = 'peg cell' id="guess">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class = 'peg cell'></div>
+            <div class = 'peg cell' id="guess">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class = 'peg cell'></div>
+            <div class = 'peg cell' id="guess">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class = 'peg cell'></div>
+            <div class = 'peg cell' id="guess">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class = 'peg cell'></div>
+            <div class = 'peg cell' id="guess">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class = 'peg cell'></div>
+            <div class = 'peg cell' id="guess">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class = 'peg cell'></div>
+            <div class = 'peg cell' id="guess">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class = 'peg cell'></div>
+            <div class = 'peg cell' id="guess">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class = 'peg cell'></div>
+            <div class = 'peg cell' id="guess">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class = 'new-game'>
+                <button type='button'>New Game</button>
+            </div>
+        </main>
+        <side>
+            <div class='selector' id='red'></div>
+            <div class='selector' id='green'></div>
+            <div class='selector' id='blue'></div>
+            <div class='selector' id='yellow'></div>
+            <div class='selector' id='brown'></div>
+            <div class='selector' id='orange'></div>
+            <div class='selector' id='black'></div>
+            <div class='selector' id='white'></div>
+            <div class="submit">
+                <button type='button'>Submit</button>
+            </div>
+        </side>
+    </body2>
 </body>
 </html>
