got some java script working and adding more div ID's

--- a/index.html
+++ b/index.html
@@ -14,70 +14,120 @@
         <main>
             <div class='empty'></div>
             <div class = 'master cell'></div>
-            <div class = 'peg cell'></div>
+            <div class = 'peg cell' id="clue">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
             <div class = 'peg cell' id="guess">
                 <div></div>
                 <div></div>
                 <div></div>
                 <div></div>
             </div>
-            <div class = 'peg cell'></div>
+            <div class = 'peg cell' id="clue">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
             <div class = 'peg cell' id="guess">
                 <div></div>
                 <div></div>
                 <div></div>
                 <div></div>
             </div>
-            <div class = 'peg cell'></div>
+            <div class = 'peg cell' id="clue">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
             <div class = 'peg cell' id="guess">
                 <div></div>
                 <div></div>
                 <div></div>
                 <div></div>
             </div>
-            <div class = 'peg cell'></div>
+            <div class = 'peg cell' id="clue">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
             <div class = 'peg cell' id="guess">
                 <div></div>
                 <div></div>
                 <div></div>
                 <div></div>
             </div>
-            <div class = 'peg cell'></div>
+            <div class = 'peg cell' id="clue">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
             <div class = 'peg cell' id="guess">
                 <div></div>
                 <div></div>
                 <div></div>
                 <div></div>
             </div>
-            <div class = 'peg cell'></div>
+            <div class = 'peg cell' id="clue">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
             <div class = 'peg cell' id="guess">
                 <div></div>
                 <div></div>
                 <div></div>
                 <div></div>
             </div>
-            <div class = 'peg cell'></div>
+            <div class = 'peg cell' id="clue">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
             <div class = 'peg cell' id="guess">
                 <div></div>
                 <div></div>
                 <div></div>
                 <div></div>
             </div>
-            <div class = 'peg cell'></div>
+            <div class = 'peg cell' id="clue">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
             <div class = 'peg cell' id="guess">
                 <div></div>
                 <div></div>
                 <div></div>
                 <div></div>
             </div>
-            <div class = 'peg cell'></div>
+            <div class = 'peg cell' id="clue">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
             <div class = 'peg cell' id="guess">
                 <div></div>
                 <div></div>
                 <div></div>
                 <div></div>
             </div>
-            <div class = 'peg cell'></div>
+            <div class = 'peg cell' id="clue">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
             <div class = 'peg cell' id="guess">
                 <div></div>
                 <div></div>
