--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <div></div>
             </div>
             <div class = 'new-game'>
-                <button type='button'>New Game</button>
+                <button class='button'>New Game</button>
             </div>
         </main>
         <side>
@@ -148,7 +148,7 @@
             <div class='selector' id='black'></div>
             <div class='selector' id='white'></div>
             <div class="submit">
-                <button type='button'>Submit</button>
+                <button class='button'>Submit</button>
             </div>
         </side>
     </body2>
