the entire game loop is now playable, a few more QOL improvements and the MVP will be complete

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </head>
     <body>
         <body2> 
+            <!-- <h6>Master Mind will pick a code made up of four unique pegs, you have 10 guesses to get the code correct</h6> -->
             <side>
                 <div class='selector' id='red'>   </div>
                 <div class='selector' id='green'> </div>
