--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
     <body>
         <body2> 
             <!-- <h6>Master Mind will pick a code made up of four unique pegs, you have 10 guesses to get the code correct</h6> -->
-            <div class='greeting'>MasterMind!</div>
-            <div clas='rules'></div>
+            <div class ='greeting'>
+                <div>MasterMind!</div>
+                <a>click here for rules<a></a>
+            </div>  
+            <!-- <div clas='rules'></div> -->
             <side>
                 <div class='selector' id='red'>   </div>
                 <div class='selector' id='green'> </div>
@@ -23,8 +26,6 @@
                 <div class='selector' id='yellow'></div>
                 <div class='selector' id='brown'> </div>
                 <div class='selector' id='orange'></div>
-                <div class='selector' id='black'> </div>
-                <div class='selector' id='white'> </div>
                 <div class="submit">
                     <button class='sub-button'>Submit</button>
                 </div>
@@ -67,7 +68,7 @@
             <div class='tracker'></div>
             <div class='tracker'></div>
             <div class='tracker'></div>
-            <div class='tracker'>turn 1</div>
+            <div class='tracker'></div>
         </div>
     </body2>
 </body>
