--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <body>
         <body2> 
             <!-- <h6>Master Mind will pick a code made up of four unique pegs, you have 10 guesses to get the code correct</h6> -->
-            <div class ='greeting'>
+            <div class="status">Game On!</div>
+            <div class='greeting'>
                 <div>MasterMind!</div>
-                <a>click here for rules<a></a>
+                <a>Click here for rules<a></a>
             </div>  
             <!-- <div clas='rules'></div> -->
             <side>
@@ -69,6 +70,7 @@
             <div class='tracker'></div>
             <div class='tracker'></div>
             <div class='tracker'></div>
+            <div class='warning'></div>
         </div>
     </body2>
 </body>
