fixed a mistake in the winning logic, began working on the transition from normal to hard mode

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=BioRhyme&display=swap" rel="stylesheet">
     </head>
     <body>
+        <div class='background-container'></div>
         <body2> 
             <!-- <h6>Master Mind will pick a code made up of four unique pegs, you have 10 guesses to get the code correct</h6> -->
             <div class="status">Game On!</div>
