--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset='UTF-8'>
+        <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+        <meta name='viewport' content='width=device-width, initial-scale=1.0'>
         <title>Master MindFlayer</title>
-        <link rel="stylesheet" href="css/main.css">
-        <script defer src="js/main.js"></script>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=BioRhyme&display=swap" rel="stylesheet">
+        <link rel='stylesheet' href='css/main.css'>
+        <script defer src='js/main.js'></script>
+        <link rel='preconnect' href='https://fonts.googleapis.com'>
+        <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin>
+        <link href='https://fonts.googleapis.com/css2?family=BioRhyme&display=swap' rel='stylesheet'>
     </head>
     <body>
         <div class='background-container'></div>
         <body2> 
             <!-- <h6>Master Mind will pick a code made up of four unique pegs, you have 10 guesses to get the code correct</h6> -->
-            <div class="status">Game On!</div>
+            <div class='status'>Game On!</div>
+            <button type='button' id='mindflayer'>Challenge the MINDFLAYER!</button>
             <div class='greeting'>
                 <div>MasterMind!</div>
                 <a>Click here for rules<a></a>
