--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </side>
         <main>
             <div id='empty'></div>
-            <div id='master-cell'></div>
+            <div class='master-cell'></div>
             <div class='peg-cell-clue'> </div>
             <div class='peg-cell-guess'></div>
             <div class='peg-cell-clue'> </div>
