--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <!-- <h6>Master Mind will pick a code made up of four unique pegs, you have 10 guesses to get the code correct</h6> -->
             <div class='status'>Game On!</div>
             <button type='button' id='mindflayer'>Challenge the MINDFLAYER!</button>
-            <div class='greeting'>
-                <div>MasterMind!</div>
-                <a>Click here for rules<a></a>
-            </div>  
+            <rule class='greeting'>
+                MasterMind!<br>
+                Click here for rules
+            </rule>  
             <!-- <div clas='rules'></div> -->
             <side>
                 <div class='selector' id='red'>   </div>
